fix some spacing errors

--- a/src/scss/objects/_avatar.scss
+++ b/src/scss/objects/_avatar.scss
@@ -12,7 +12,7 @@
 $avatar-width: 60% !default;
 $avatar-border-radius: 50% !default;
 $avatar-online-top: 10% !default;
-$avatar-attribute-size: unitless($sp1) !default;
+$avatar-attribute-size: strip-units($sp1) !default;
 $avatar-border-size: 2px !default;
 $avatar-border-type: solid !default;
 $avatar-small-size: $default-icon-lg !default;
